// Copyright 2023 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

import "components/sync/protocol/web_apk_specifics.proto";

option optimize_for = LITE_RUNTIME;

package webapk;

// Synced & local WebApk data to be serialized into a ModelTypeStore.
message WebApkProto {
  // Synced data.
  optional sync_pb.WebApkSpecifics sync_data = 1;

  // Local data. Not to be synced.
  optional bool is_locally_installed = 2;
}
